--- a/docs/.vitepress/theme/styles/vars.scss
+++ b/docs/.vitepress/theme/styles/vars.scss
@@ -101,3 +101,33 @@
 .DocSearch {
   --docsearch-primary-color: var(--vp-c-brand-1) !important;
 }
+
+/* h1标题的字体颜色渐变色 */
+h1 {
+  background: -webkit-linear-gradient(-45deg, #e43498 5%, #5ad7dd 15%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+}
+/* 链接下划线去除 */
+//.vp-doc a {
+//  text-decoration: none;
+//}
+
+/* 引用块 > */
+.vp-doc blockquote {
+  border-radius: 5px;
+  padding: 10px 16px;
+  background-color:  var(--vp-c-green-soft);
+  position: relative;
+  border-left: 4px solid green;
+}
+
+.medium-zoom-overlay {
+  z-index: 20;
+}
+
+//.medium-zoom-image {
+//  z-index: 9999 !important;/* 给的值是21，但是实测盖不住，直接999 */
+//}
