--- a/docs/.vitepress/theme/styles/vars.scss
+++ b/docs/.vitepress/theme/styles/vars.scss
@@ -131,3 +131,8 @@ h1 {
 //.medium-zoom-image {
 //  z-index: 9999 !important;/* 给的值是21，但是实测盖不住，直接999 */
 //}
+
+// 暗黑模式下使icon其更加清晰可见
+.dark .box .box-header .icon {
+  filter: invert(1);
+}
